# udr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO  project.clj
doc/: intro.md
src/: IntegerVersion.cpp  IntegerVersion.hpp  Name.hpp  PackageSpec.hpp  Resolver.hpp  StringName.cpp  StringName.hpp  TODO  Version.hpp  VersionComparison.cpp  VersionComparison.hpp  conj_spec.hpp  constraints.hpp  disj_spec.hpp  gripe.hpp  name_spec.hpp  neg_spec.hpp  package.hpp  pkg_spec.hpp  repository.h  repository.hpp  resolve  resolver.hpp  spec.hpp  types.hpp  version_relation_spec.hpp
src/udr/: core.clj  corea.clj  sample.json
test/: CMakeLists.txt  TestAPIClasses.cpp  TestIntegerVersion.cpp  TestNameClasses.cpp  TestResolver.cpp  TestVersionClasses.cpp  TestVersionComparison.cpp  TestingPackage.hpp  mock_repository.cpp  mock_repository.hpp  test_gripe.cpp  test_name_spec.cpp  test_pkg_spec.cpp  test_resolver.cpp  test_spec.cpp  test_version_relation_spec.cpp
test/udr/: core_test.clj
